Header fixed on mobile

--- a/app/styles/theme/header.scss
+++ b/app/styles/theme/header.scss
@@ -38,6 +38,12 @@ header li {
   line-height: $header-height / 2;
   text-align: center;
   
+  @media #{$sm} {
+    &:nth-child(2), &:nth-child(3), &:nth-child(4) {
+      display: none;
+    }
+  }
+  
   &:first-child {
     border-right: 1px solid $gray-2;
     margin-right: 10px;
@@ -50,6 +56,8 @@ header li {
       border-color: $pri-2;
       color: $gray-4;
     }
+    
+    @media #{$sm} {border-right: none;}
   }
 }
 
